# ADXL355-CPP-SDK

./: .gitignore  ADXL355.cpp  ADXL355.h  ADXL355_connection_error.h  ADXL355_io_error.h  ADXL355_logic_error.h  CMakeLists.txt  main.cpp
